SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1213676

--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -15,8 +15,12 @@ Comment[es]=Protocolo AIM
 Comment[et]=AIM protokoll
 Comment[fr]=Protocole AIM
 Comment[ga]=Prótacal AIM
+Comment[gl]=Protocolo AIM
+Comment[hu]=AIM protokoll
 Comment[it]=Protocollo AIM
+Comment[kk]=AIM протоколы
 Comment[km]=ពិធីការ​ AIM ​​
+Comment[lt]=AIM protokolas
 Comment[nb]=AIM-protokoll
 Comment[nds]=AIM-Protokoll
 Comment[nl]=AIM-protocol
@@ -48,9 +52,12 @@ Name[es]=AIM
 Name[et]=AIM
 Name[fr]=AIM
 Name[ga]=AIM
+Name[gl]=AIM
 Name[hu]=AIM
 Name[it]=AIM
+Name[kk]=AIM
 Name[km]=AIM​
+Name[lt]=AIM
 Name[nb]=AIM
 Name[nds]=AIM
 Name[nl]=AIM
@@ -59,6 +66,7 @@ Name[pt]=AIM
 Name[pt_BR]=AIM
 Name[ro]=AIM
 Name[ru]=AIM
+Name[sl]=AIM
 Name[sr]=АИМ
 Name[sr@ijekavian]=АИМ
 Name[sr@ijekavianlatin]=AIM
