--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -15,8 +15,12 @@ Comment[es]=Protocolo Gadu-Gadu
 Comment[et]=Gadu-Gadu protokoll
 Comment[fr]=Protocole Gadu-Gadu
 Comment[ga]=Prótacal Gadu-Gadu
+Comment[gl]=Protocolo Gadu-Gadu
+Comment[hu]=Gadu-Gadu protokoll
 Comment[it]=Protocollo Gadu-Gadu
+Comment[kk]=Gadu-Gadu протоколы
 Comment[km]=ពិធីការ​ Gadu-Gadu
+Comment[lt]=Gadu-Gadu protokolas
 Comment[nb]=Gadu-Gadu-protokoll
 Comment[nds]=Gadu-Gadu-Protokoll
 Comment[nl]=Gadu-Gadu-protocol
@@ -48,9 +52,12 @@ Name[es]=Gadu-Gadu
 Name[et]=Gadu-Gadu
 Name[fr]=Gadu-Gadu
 Name[ga]=Gadu-Gadu
+Name[gl]=Gadu-Gadu
 Name[hu]=Gadu-Gadu
 Name[it]=Gadu-Gadu
+Name[kk]=Gadu-Gadu
 Name[km]=Gadu-Gadu
+Name[lt]=Gadu-Gadu
 Name[nb]=Gadu-Gadu
 Name[nds]=Gadu-Gadu
 Name[nl]=Gadu-Gadu
@@ -59,6 +66,7 @@ Name[pt]=Gadu-Gadu
 Name[pt_BR]=Gadu-Gadu
 Name[ro]=Gadu-Gadu
 Name[ru]=Gadu-Gadu
+Name[sl]=Gadu-Gadu
 Name[sr]=Гаду‑гаду
 Name[sr@ijekavian]=Гаду‑гаду
 Name[sr@ijekavianlatin]=Gadu‑Gadu
