--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -15,8 +15,12 @@ Comment[es]=Mensajería de Novell GroupWise
 Comment[et]=Novell GroupWise Messenger
 Comment[fr]=Messagerie GroupWise Novell
 Comment[ga]=Teachtaire Novell GroupWise
+Comment[gl]=Mensaxeiro GroupWise da Novell
+Comment[hu]=Novell GroupWise üzenetküldő
 Comment[it]=Novell GroupWise Messenger
+Comment[kk]=Novell GroupWise хабарласуы
 Comment[km]=កម្មវិធី​ផ្ញើសារ​របស់ Novell GroupWise
+Comment[lt]=Novell GroupWise žinučių klientas
 Comment[nb]=Novell GroupWise meldingsprogram
 Comment[nds]=Novell-GroupWise-Kortnarichtenmaker
 Comment[nl]=Protocol voor Novell GroupWise Messenger
@@ -47,9 +51,12 @@ Name[es]=GroupWise
 Name[et]=GroupWise
 Name[fr]=GroupWise
 Name[ga]=GroupWise
+Name[gl]=GroupWise
 Name[hu]=GroupWise
 Name[it]=GroupWise
+Name[kk]=GroupWise
 Name[km]=GroupWise​
+Name[lt]=GroupWise
 Name[nb]=GroupWise
 Name[nds]=GroupWise
 Name[nl]=GroupWise
@@ -57,6 +64,7 @@ Name[nn]=GroupWise
 Name[pt]=GroupWise
 Name[pt_BR]=GroupWise
 Name[ro]=GroupWise
+Name[sl]=GroupWise
 Name[sr]=Групвајз
 Name[sr@ijekavian]=Групвајз
 Name[sr@ijekavianlatin]=GroupWise
