--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -15,8 +15,12 @@ Comment[es]=Protocolo ICQ
 Comment[et]=ICQ protokoll
 Comment[fr]=Protocole ICQ
 Comment[ga]=Prótacal ICQ
+Comment[gl]=Protocolo ICQ
+Comment[hu]=ICQ protokoll
 Comment[it]=Protocollo ICQ
+Comment[kk]=ICQ протоколыl
 Comment[km]=ពិធីការ​ ICQ
+Comment[lt]=ICQ protokolas
 Comment[nb]=ICQ-protokoll
 Comment[nds]=ICQ-Protokoll
 Comment[nl]=ICQ-protocol
@@ -25,6 +29,7 @@ Comment[pt]=Protocolo ICQ
 Comment[pt_BR]=Protocolo do ICQ
 Comment[ro]=Protocol ICQ
 Comment[ru]=Протокол ICQ
+Comment[sl]=Protokol ICQ
 Comment[sr]=Протокол ајсикју
 Comment[sr@ijekavian]=Протокол ајсикју
 Comment[sr@ijekavianlatin]=Protokol ICQ
@@ -48,9 +53,12 @@ Name[es]=ICQ
 Name[et]=ICQ
 Name[fr]=ICQ
 Name[ga]=ICQ
+Name[gl]=ICQ
 Name[hu]=ICQ
 Name[it]=ICQ
+Name[kk]=ICQ
 Name[km]=ICQ
+Name[lt]=ICQ
 Name[nb]=ICQ
 Name[nds]=ICQ
 Name[nl]=ICQ
@@ -59,6 +67,7 @@ Name[pt]=ICQ
 Name[pt_BR]=ICQ
 Name[ro]=ICQ
 Name[ru]=ICQ
+Name[sl]=ICQ
 Name[sr]=ајсикју
 Name[sr@ijekavian]=ајсикју
 Name[sr@ijekavianlatin]=ICQ
