--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -15,8 +15,12 @@ Comment[es]=Internet Relay Chat
 Comment[et]=Rühmadiskussioon internetis
 Comment[fr]=Relai Internet de discussion
 Comment[ga]=Internet Relay Chat
+Comment[gl]=Conversas por Internet
+Comment[hu]=Internet Relay Chat
 Comment[it]=Internet Relay Chat
+Comment[kk]=Internet Relay Chat
 Comment[km]=ជជែកកំសាន្ត​បញ្ជូន​តាម​អ៊ីនធឺណិត​
+Comment[lt]=Internetu vykstantys pokalbiai (IRC)
 Comment[nb]=Internet Relay Chat
 Comment[nds]=Klöönsnack (Internet Relay Chat)
 Comment[nl]=Internet Relay Chat
@@ -24,6 +28,7 @@ Comment[nn]=Internet Relay Chat
 Comment[pt]=Internet Relay Chat
 Comment[pt_BR]=Bate-papo via Internet (IRC)
 Comment[ro]=Internet Relay Chat
+Comment[sl]=Internet Relay Chat
 Comment[sr]=Ћаскање путем Интернета
 Comment[sr@ijekavian]=Ћаскање путем Интернета
 Comment[sr@ijekavianlatin]=Ćaskanje putem Interneta
@@ -46,9 +51,12 @@ Name[es]=IRC
 Name[et]=IRC
 Name[fr]=IRC
 Name[ga]=IRC
+Name[gl]=IRC
 Name[hu]=IRC
 Name[it]=IRC
+Name[kk]=IRC
 Name[km]=IRC​
+Name[lt]=IRC
 Name[nb]=IRC
 Name[nds]=IRC
 Name[nl]=IRC
@@ -57,6 +65,7 @@ Name[pt]=IRC
 Name[pt_BR]=IRC
 Name[ro]=IRC
 Name[ru]=IRC
+Name[sl]=IRC
 Name[sr]=ИРЦ
 Name[sr@ijekavian]=ИРЦ
 Name[sr@ijekavianlatin]=IRC
