--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -15,8 +15,12 @@ Comment[es]=Protocolo Jabber
 Comment[et]=Jabberi protokoll
 Comment[fr]=Protocole Jabber
 Comment[ga]=Prótacal Jabber
+Comment[gl]=Protocolo Jabber
+Comment[hu]=Jabber protokoll
 Comment[it]=Protocollo Jabber
+Comment[kk]=Jabber протоколы
 Comment[km]=ពិធី​​ការ​ Jabber
+Comment[lt]=Jabber protokolas
 Comment[nb]=Jabber-protokoll
 Comment[nds]=Jabber-Protokoll
 Comment[nl]=Jabber-protocol
@@ -25,6 +29,7 @@ Comment[pt]=Protocolo Jabber
 Comment[pt_BR]=Protocolo do Jabber
 Comment[ro]=Protocol Jabber
 Comment[ru]=Протокол Jabber
+Comment[sl]=Protokol Jabber
 Comment[sr]=Протокол џабер
 Comment[sr@ijekavian]=Протокол џабер
 Comment[sr@ijekavianlatin]=Protokol Jabber
@@ -48,9 +53,12 @@ Name[es]=Jabber
 Name[et]=Jabber
 Name[fr]=Jabber
 Name[ga]=Jabber
+Name[gl]=Jabber
 Name[hu]=Jabber
 Name[it]=Jabber
+Name[kk]=Jabber
 Name[km]=Jabber
+Name[lt]=Jabber
 Name[nb]=Jabber
 Name[nds]=Jabber
 Name[nl]=Jabber
@@ -59,6 +67,7 @@ Name[pt]=Jabber
 Name[pt_BR]=Jabber
 Name[ro]=Jabber
 Name[ru]=Jabber
+Name[sl]=Jabber
 Name[sr]=Џабер
 Name[sr@ijekavian]=Џабер
 Name[sr@ijekavianlatin]=Jabber
