--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -15,8 +15,12 @@ Comment[es]=Protocolo Meanwhile
 Comment[et]=Meanwhile'i protokoll
 Comment[fr]=Protocole Meanwhile
 Comment[ga]=Prótacal Meanwhile
+Comment[gl]=Protocolo Meanwhile
+Comment[hu]=Meanwhile protokoll
 Comment[it]=Protocollo Meanwhile
+Comment[kk]=Meanwhile протоколы
 Comment[km]=ពិធីការ​ Meanwhile
+Comment[lt]=Meanwhile protokolas
 Comment[nb]=Meanwhile-protokoll
 Comment[nds]=Meanwhile-Protokoll
 Comment[nl]=Meanwhile-protocol
@@ -47,9 +51,12 @@ Name[es]=Meanwhile
 Name[et]=Meanwhile
 Name[fr]=Meanwhile
 Name[ga]=Meanwhile
+Name[gl]=Meanwhile
 Name[hu]=Meanwhile
 Name[it]=Meanwhile
+Name[kk]=Meanwhile
 Name[km]=Meanwhile
+Name[lt]=Meanwhile
 Name[nb]=Meanwhile
 Name[nds]=Meanwhile
 Name[nl]=Meanwhile
