--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -15,8 +15,12 @@ Comment[es]=Telefonía por internet de Skype
 Comment[et]=Internetitelefon Skype
 Comment[fr]=Téléphonie sur internet Skype
 Comment[ga]=Teileafónaíocht Idirlín Skype
+Comment[gl]=Telefonía por Internet de Skype
+Comment[hu]=Skype internetes telefon
 Comment[it]=Telefonia su Internet di Skype
+Comment[kk]=Skype Интернет телефоны
 Comment[km]=ទូរស័ព្ទ​តាម​អ៊ីនធឺណិត​ ​Skype​
+Comment[lt]=Skype interneto telefonija
 Comment[nb]=Skype IP-telefoni
 Comment[nds]=Internet-Telefoneren mit Skype
 Comment[nl]=Skype internet-telefonie
@@ -46,9 +50,12 @@ Name[es]=Skype
 Name[et]=Skype
 Name[fr]=Skype
 Name[ga]=Skype
+Name[gl]=Skype
 Name[hu]=Skype
 Name[it]=Skype
+Name[kk]=Skype
 Name[km]=Skype
+Name[lt]=Skype
 Name[nb]=Skype
 Name[nds]=Skype
 Name[nl]=Skype
@@ -56,6 +63,7 @@ Name[nn]=Skype
 Name[pt]=Skype
 Name[pt_BR]=Skype
 Name[ro]=Skype
+Name[sl]=Skype
 Name[sr]=Скајп
 Name[sr@ijekavian]=Скајп
 Name[sr@ijekavianlatin]=Skype
