--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -15,8 +15,12 @@ Comment[es]=Protocolo SMS
 Comment[et]=SMS protokoll
 Comment[fr]=Protocole SMS
 Comment[ga]=Prótacal SMS
+Comment[gl]=Protocolo SMS
+Comment[hu]=SMS protokoll
 Comment[it]=Protocollo SMS
+Comment[kk]=SMS протоколы
 Comment[km]=ពិធីការ​ SMS ​​
+Comment[lt]=SMS protokolas
 Comment[nb]=SMS Protokoll
 Comment[nds]=SMS-Protokoll
 Comment[nl]=SMS-protocol
@@ -24,6 +28,7 @@ Comment[nn]=SMS-protokoll
 Comment[pt]=Protocolo SMS
 Comment[pt_BR]=Protocolo SMS
 Comment[ro]=Protocol SMS
+Comment[sl]=Protokol SMS
 Comment[sr]=Протокол СМС
 Comment[sr@ijekavian]=Протокол СМС
 Comment[sr@ijekavianlatin]=Protokol SMS
@@ -47,9 +52,12 @@ Name[es]=SMS
 Name[et]=SMS
 Name[fr]=SMS
 Name[ga]=SMS
+Name[gl]=SMS
 Name[hu]=SMS
 Name[it]=SMS
+Name[kk]=SMS
 Name[km]=SMS
+Name[lt]=SMS
 Name[nb]=SMS
 Name[nds]=SMS
 Name[nl]=SMS
@@ -57,6 +65,7 @@ Name[nn]=SMS
 Name[pt]=SMS
 Name[pt_BR]=SMS
 Name[ro]=SMS
+Name[sl]=SMS
 Name[sr]=СМС
 Name[sr@ijekavian]=СМС
 Name[sr@ijekavianlatin]=SMS
