--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -15,8 +15,12 @@ Comment[es]=Protocolo Yahoo
 Comment[et]=Yahoo protokoll
 Comment[fr]=Protocole Yahoo
 Comment[ga]=Prótacal Yahoo
+Comment[gl]=Protocolo Yahoo
+Comment[hu]=Yahoo protokoll
 Comment[it]=Protocollo Yahoo
+Comment[kk]=Yahoo протоколы
 Comment[km]=ពិធីការ​យ៉ាហ៊ូ​
+Comment[lt]=Yahoo protokolas
 Comment[nb]=Yahoo-protokoll
 Comment[nds]=Yahoo-Protokoll
 Comment[nl]=Yahoo-protocol
@@ -47,9 +51,12 @@ Name[es]=Yahoo
 Name[et]=Yahoo
 Name[fr]=Yahoo
 Name[ga]=Yahoo
+Name[gl]=Yahoo
 Name[hu]=Yahoo
 Name[it]=Yahoo
+Name[kk]=Yahoo
 Name[km]=យ៉ាហ៊ូ​
+Name[lt]=Yahoo
 Name[nb]=Yahoo
 Name[nds]=Yahoo
 Name[nl]=Yahoo
@@ -57,6 +64,7 @@ Name[nn]=Yahoo
 Name[pt]=Yahoo
 Name[pt_BR]=Yahoo
 Name[ro]=Yahoo
+Name[sl]=Yahoo
 Name[sr]=Јаху
 Name[sr@ijekavian]=Јаху
 Name[sr@ijekavianlatin]=Yahoo
