--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -22,9 +22,12 @@ Name[fi]=Yhteystietotoiminnot
 Name[fr]=Actions sur les contacts
 Name[ga]=Gníomhartha Teagmhála
 Name[gl]=Accións de contacto
+Name[hu]=Névjegyműveletek
 Name[it]=Azioni per i contatti
 Name[ja]=連絡先アクション
+Name[kk]=Контакттың амалдары
 Name[km]=អំពើ​ទំនាក់​ទំនង
+Name[lt]=Veiksmai su kontaktais
 Name[lv]=Kontaktu darbības
 Name[nb]=Kontakthandlinger
 Name[nds]=Kontakt-Akschonen
@@ -32,7 +35,7 @@ Name[nl]=Contactpersoon-acties
 Name[nn]=Kontakthandlingar
 Name[pa]=ਸੰਪਰਕ ਐਕਸ਼ਨ
 Name[pt]=Acções do Contacto
-Name[pt_BR]=Ações do contatos
+Name[pt_BR]=Ações dos contatos
 Name[ro]=Acțiuni contacte
 Name[sr]=Радње са контактима
 Name[sr@ijekavian]=Радње са контактима
@@ -59,8 +62,10 @@ Comment[fi]=Yhteystietotoimintojen asetukset
 Comment[fr]=Configurer les actions sur les contacts
 Comment[ga]=Cumraigh na Gníomhartha Teagmhála
 Comment[gl]=Configurar as accións de contacto
+Comment[hu]=A névjegyműveletek beállítása
 Comment[it]=Configura le azioni per i contatti
 Comment[ja]=連絡先アクションの設定
+Comment[kk]=Контакттың амалдарын баптау
 Comment[km]=កំណត់​រចនាសម្ព័ន្ធ​អំពើ​ទំនាក់​ទំនង
 Comment[lt]=Konfigūruoti kontaktų veiksmus
 Comment[lv]=Konfigurēt kontaktu darbības
@@ -72,6 +77,7 @@ Comment[pa]=ਸੰਪਰਕ ਐਕਸ਼ਨ ਸੰਰਚਨਾ
 Comment[pt]=Configurar as Acções do Contacto
 Comment[pt_BR]=Configura as ações do contato
 Comment[ro]=Configurează acțiunile contact
+Comment[sl]=Nastavi dejanja stikov
 Comment[sr]=Подесите радње са контактима
 Comment[sr@ijekavian]=Подесите радње са контактима
 Comment[sr@ijekavianlatin]=Podesite radnje sa kontaktima
