--- a/kresources/kresources.desktop
+++ b/kresources/kresources.desktop
@@ -22,11 +22,12 @@ Name[et]=KDE ressursid
 Name[fi]=KDE-resurssit
 Name[fr]=Ressources KDE
 Name[ga]=Acmhainní KDE
-Name[gl]=Recursos de KDE
+Name[gl]=Recursos do KDE
 Name[hne]=केडीई संसाधन
 Name[hu]=KDE-erőforrások
 Name[it]=Risorse di KDE
 Name[ja]=KDE リソース
+Name[kk]=KDE деректер көзі
 Name[km]=ធនធាន​របស់ KDE
 Name[lt]=KDE resursai
 Name[lv]=KDE resursi
@@ -70,11 +71,12 @@ Comment[et]=KDE ressursside seadistamine
 Comment[fi]=KDE-resurssien asetukset
 Comment[fr]=Configurer les ressources KDE
 Comment[ga]=Cumraigh Acmhainní KDE
-Comment[gl]=Configurar os recursos de KDE
+Comment[gl]=Configurar os recursos do KDE
 Comment[hne]=केडीई संसाधन मन ल कान्फिगर करव
 Comment[hu]=A KDE-erőforrások beállítása
 Comment[it]=Configura le risorse di KDE
 Comment[ja]=KDE リソースの設定
+Comment[kk]=KDE деректер көзідерін баптау
 Comment[km]=កំណត់​រចនាសម្ព័ន្ធ​ធនធាន KDE
 Comment[lt]=Konfigūruoti KDE resursus
 Comment[lv]=Konfigurēt KDE resursus
