--- a/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
+++ b/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
@@ -14,8 +14,12 @@ Name[es]=Protocolo de mensajería instantánea de KAddressbook
 Name[et]=KDE aadressiraamatu kiirsuhtlusprotokoll
 Name[fr]=Protocole de messagerie instantanée KAdressbook
 Name[ga]=Prótacal Teachtaireachtaí Meandaracha KAddressbook
+Name[gl]=Proctocolo de mensaxaría instantánea do KAddressbook
+Name[hu]=KAddressbook azonnali üzenetküldő protokoll
 Name[it]=Protocollo di messaggi istantanei di KAddressbook
-Name[km]=ពិធីការ​ផ្ញើសារ​បន្ទាន់​របស់ KAddressbook
+Name[kk]=KAddressbook-тың лезде хабарласу протоколы
+Name[km]=ពិធីការ​ផ្ញើ​សារ​បន្ទាន់​របស់ KAddressbook
+Name[lt]=KAdresų knygelės momentinių pranešimų protokolas
 Name[nb]=KAdressbook lynmeldingsprotokoll
 Name[nds]=KAddressbook-Kortnarichten-Protokoll
 Name[nl]=KAddressbook Instant Messaging-protocol
