--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -15,9 +15,12 @@ Comment[es]=MSN Messenger
 Comment[et]=MSN Messenger
 Comment[fr]=Messagerie MSN
 Comment[ga]=MSN Messenger
+Comment[gl]=Mensaxeiro MSN
 Comment[hu]=MSN Messenger
 Comment[it]=MSN Messenger
+Comment[kk]=MSN хабарласуы
 Comment[km]=កម្មវិធី​ផ្ញើសារ MSN
+Comment[lt]=MSN žinučių klientas
 Comment[nb]=MSN Messenger
 Comment[nds]=MSN-Kortnarichtenmaker
 Comment[nl]=MSN Messenger
@@ -47,9 +50,12 @@ Name[es]=MSN Messenger
 Name[et]=MSN Messenger
 Name[fr]=Messagerie MSN
 Name[ga]=MSN Messenger
+Name[gl]=MSN Messenger
 Name[hu]=MSN Messenger
 Name[it]=MSN Messenger
+Name[kk]=MSN Messenger
 Name[km]=កម្មវិធី​ផ្ញើសារ MSN
+Name[lt]=MSN žinučių klientas
 Name[nb]=MSN Messenger
 Name[nds]=MSN-Kortnarichtenmaker
 Name[nl]=MSN Messenger
@@ -57,6 +63,7 @@ Name[nn]=MSN Messenger
 Name[pt]=MSN Messenger
 Name[pt_BR]=MSN Messenger
 Name[ro]=Mesagerul MSN
+Name[sl]=MSN Messenger
 Name[sr]=МСН месенџер
 Name[sr@ijekavian]=МСН месенџер
 Name[sr@ijekavianlatin]=MSN Messenger
