SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1215309

--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -11,7 +11,7 @@ Comment[da]=Internettelefoni med Skype
 Comment[de]=Skype-Internettelefonie
 Comment[en_GB]=Skype Internet Telephony
 Comment[eo]=Skype Interreta Telefonado
-Comment[es]=Telefonía por internet de Skype
+Comment[es]=Telefonía por Internet de Skype
 Comment[et]=Internetitelefon Skype
 Comment[fr]=Téléphonie sur internet Skype
 Comment[ga]=Teileafónaíocht Idirlín Skype
