--- a/kresources/kresources_plugin.desktop
+++ b/kresources/kresources_plugin.desktop
@@ -56,7 +56,7 @@ Comment[da]=KResource-strukturplugin
 Comment[de]=Modul für KRessourcen-Grundgerüst
 Comment[el]=Πρόσθετο πλαισίου εργασίας του KResource
 Comment[en_GB]=KResources Framework Plugin
-Comment[es]=Complemento de estructura de KResources
+Comment[es]=Complemento de infraestructura de KResources
 Comment[et]=KDE ressursside raamistiku plugin
 Comment[fi]=KResources-kehysliitännäinen
 Comment[fr]=Module externe d'infrastructure de ressources
