When using a "traditional" calendar, don't allow the user to choose "Calendar in Local file" inside the wizard.
We already have an akonadi replacement for that and it only confuses users because they wouldn't know which resource is the way to go.

svn path=/trunk/KDE/kdepimlibs/; revision=1216004

--- a/kcal/CMakeLists.txt
+++ b/kcal/CMakeLists.txt
@@ -196,7 +196,7 @@ install( FILES
         DESTINATION ${INCLUDE_INSTALL_DIR}/kcal COMPONENT Devel)
 
 if (NOT KDEPIM_NO_KRESOURCES)
-  install( FILES local.desktop localdir.desktop  DESTINATION ${SERVICES_INSTALL_DIR}/kresources/kcal)
+  install( FILES localdir.desktop  DESTINATION ${SERVICES_INSTALL_DIR}/kresources/kcal)
   install( FILES
         calendarresources.h
         calhelper.h
