--- a/qgpgme/tests/CMakeLists.txt
+++ b/qgpgme/tests/CMakeLists.txt
@@ -17,6 +17,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${KDE4_ENABLE_EXCEPTIONS}")
 set( qgpgme_TESTS
   dataprovidertest
   installtest
+  gpgagentmonitoreventcounterstest
   # PORT ME AWAY FROM EVENT LOOPS
   #gpgsetexpirytimetest
   #gpgsetownertrusttest
