Add unit test for the Todo::recurTodo() method.

--- a/kcalcore/tests/CMakeLists.txt
+++ b/kcalcore/tests/CMakeLists.txt
@@ -38,6 +38,7 @@ KCALCORE_UNIT_TESTS(
   testperiod
   testfreebusyperiod
   testperson
+  testrecurtodo
   testsortablelist
   testtodo
   testtimesininterval
