SVN_SILENT made messages (.desktop file)

--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -18,6 +18,7 @@ Comment[ga]=Prótacal Gadu-Gadu
 Comment[gl]=Protocolo Gadu-Gadu
 Comment[hu]=Gadu-Gadu protokoll
 Comment[it]=Protocollo Gadu-Gadu
+Comment[ja]=Gadu-Gadu プロトコル
 Comment[kk]=Gadu-Gadu протоколы
 Comment[km]=ពិធីការ​ Gadu-Gadu
 Comment[lt]=Gadu-Gadu protokolas
@@ -55,6 +56,7 @@ Name[ga]=Gadu-Gadu
 Name[gl]=Gadu-Gadu
 Name[hu]=Gadu-Gadu
 Name[it]=Gadu-Gadu
+Name[ja]=Gadu-Gadu
 Name[kk]=Gadu-Gadu
 Name[km]=Gadu-Gadu
 Name[lt]=Gadu-Gadu
