--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -54,6 +54,7 @@ Name[ga]=GroupWise
 Name[gl]=GroupWise
 Name[hu]=GroupWise
 Name[it]=GroupWise
+Name[ja]=GroupWise
 Name[kk]=GroupWise
 Name[km]=GroupWise​
 Name[lt]=GroupWise
