--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -18,6 +18,7 @@ Comment[ga]=Prótacal ICQ
 Comment[gl]=Protocolo ICQ
 Comment[hu]=ICQ protokoll
 Comment[it]=Protocollo ICQ
+Comment[ja]=ICQ プロトコル
 Comment[kk]=ICQ протоколыl
 Comment[km]=ពិធីការ​ ICQ
 Comment[lt]=ICQ protokolas
@@ -56,6 +57,7 @@ Name[ga]=ICQ
 Name[gl]=ICQ
 Name[hu]=ICQ
 Name[it]=ICQ
+Name[ja]=ICQ
 Name[kk]=ICQ
 Name[km]=ICQ
 Name[lt]=ICQ
