--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -18,6 +18,7 @@ Comment[ga]=Internet Relay Chat
 Comment[gl]=Conversas por Internet
 Comment[hu]=Internet Relay Chat
 Comment[it]=Internet Relay Chat
+Comment[ja]=インターネットリレーチャット
 Comment[kk]=Internet Relay Chat
 Comment[km]=ជជែកកំសាន្ត​បញ្ជូន​តាម​អ៊ីនធឺណិត​
 Comment[lt]=Internetu vykstantys pokalbiai (IRC)
@@ -54,6 +55,7 @@ Name[ga]=IRC
 Name[gl]=IRC
 Name[hu]=IRC
 Name[it]=IRC
+Name[ja]=IRC
 Name[kk]=IRC
 Name[km]=IRC​
 Name[lt]=IRC
