--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -18,6 +18,7 @@ Comment[ga]=Prótacal Jabber
 Comment[gl]=Protocolo Jabber
 Comment[hu]=Jabber protokoll
 Comment[it]=Protocollo Jabber
+Comment[ja]=Jabber プロトコル
 Comment[kk]=Jabber протоколы
 Comment[km]=ពិធី​​ការ​ Jabber
 Comment[lt]=Jabber protokolas
@@ -56,6 +57,7 @@ Name[ga]=Jabber
 Name[gl]=Jabber
 Name[hu]=Jabber
 Name[it]=Jabber
+Name[ja]=Jabber
 Name[kk]=Jabber
 Name[km]=Jabber
 Name[lt]=Jabber
