--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -18,6 +18,7 @@ Comment[ga]=Prótacal Meanwhile
 Comment[gl]=Protocolo Meanwhile
 Comment[hu]=Meanwhile protokoll
 Comment[it]=Protocollo Meanwhile
+Comment[ja]=Meanwhile プロトコル
 Comment[kk]=Meanwhile протоколы
 Comment[km]=ពិធីការ​ Meanwhile
 Comment[lt]=Meanwhile protokolas
@@ -54,6 +55,7 @@ Name[ga]=Meanwhile
 Name[gl]=Meanwhile
 Name[hu]=Meanwhile
 Name[it]=Meanwhile
+Name[ja]=Meanwhile
 Name[kk]=Meanwhile
 Name[km]=Meanwhile
 Name[lt]=Meanwhile
