--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -18,6 +18,7 @@ Comment[ga]=MSN Messenger
 Comment[gl]=Mensaxeiro MSN
 Comment[hu]=MSN Messenger
 Comment[it]=MSN Messenger
+Comment[ja]=MSN メッセンジャー
 Comment[kk]=MSN хабарласуы
 Comment[km]=កម្មវិធី​ផ្ញើសារ MSN
 Comment[lt]=MSN žinučių klientas
@@ -53,6 +54,7 @@ Name[ga]=MSN Messenger
 Name[gl]=MSN Messenger
 Name[hu]=MSN Messenger
 Name[it]=MSN Messenger
+Name[ja]=MSN メッセンジャー
 Name[kk]=MSN Messenger
 Name[km]=កម្មវិធី​ផ្ញើសារ MSN
 Name[lt]=MSN žinučių klientas
