--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -18,6 +18,7 @@ Comment[ga]=Teileafónaíocht Idirlín Skype
 Comment[gl]=Telefonía por Internet de Skype
 Comment[hu]=Skype internetes telefon
 Comment[it]=Telefonia su Internet di Skype
+Comment[ja]=Skype インターネット電話
 Comment[kk]=Skype Интернет телефоны
 Comment[km]=ទូរស័ព្ទ​តាម​អ៊ីនធឺណិត​ ​Skype​
 Comment[lt]=Skype interneto telefonija
@@ -53,6 +54,7 @@ Name[ga]=Skype
 Name[gl]=Skype
 Name[hu]=Skype
 Name[it]=Skype
+Name[ja]=Skype
 Name[kk]=Skype
 Name[km]=Skype
 Name[lt]=Skype
