--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -18,6 +18,7 @@ Comment[ga]=Prótacal SMS
 Comment[gl]=Protocolo SMS
 Comment[hu]=SMS protokoll
 Comment[it]=Protocollo SMS
+Comment[ja]=SMS プロトコル
 Comment[kk]=SMS протоколы
 Comment[km]=ពិធីការ​ SMS ​​
 Comment[lt]=SMS protokolas
@@ -55,6 +56,7 @@ Name[ga]=SMS
 Name[gl]=SMS
 Name[hu]=SMS
 Name[it]=SMS
+Name[ja]=SMS
 Name[kk]=SMS
 Name[km]=SMS
 Name[lt]=SMS
