--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -18,6 +18,7 @@ Comment[ga]=Prótacal Yahoo
 Comment[gl]=Protocolo Yahoo
 Comment[hu]=Yahoo protokoll
 Comment[it]=Protocollo Yahoo
+Comment[ja]=Yahoo プロトコル
 Comment[kk]=Yahoo протоколы
 Comment[km]=ពិធីការ​យ៉ាហ៊ូ​
 Comment[lt]=Yahoo protokolas
@@ -54,6 +55,7 @@ Name[ga]=Yahoo
 Name[gl]=Yahoo
 Name[hu]=Yahoo
 Name[it]=Yahoo
+Name[ja]=Yahoo
 Name[kk]=Yahoo
 Name[km]=យ៉ាហ៊ូ​
 Name[lt]=Yahoo
