--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -18,6 +18,7 @@ Comment[ga]=Prótacal AIM
 Comment[gl]=Protocolo AIM
 Comment[hu]=AIM protokoll
 Comment[it]=Protocollo AIM
+Comment[ja]=AIM プロトコル
 Comment[kk]=AIM протоколы
 Comment[km]=ពិធីការ​ AIM ​​
 Comment[lt]=AIM protokolas
@@ -55,6 +56,7 @@ Name[ga]=AIM
 Name[gl]=AIM
 Name[hu]=AIM
 Name[it]=AIM
+Name[ja]=AIM
 Name[kk]=AIM
 Name[km]=AIM​
 Name[lt]=AIM
