SVN_SILENT made messages (.desktop file)

--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -29,7 +29,7 @@ Comment[nn]=AIM-protokoll
 Comment[pt]=Protocolo AIM
 Comment[pt_BR]=Protocolo do AIM
 Comment[ro]=Protocol AIM
-Comment[ru]=Протокол AIM
+Comment[ru]=Протокол обмена сообщениями AIM
 Comment[sr]=Протокол АИМ
 Comment[sr@ijekavian]=Протокол АИМ
 Comment[sr@ijekavianlatin]=Protokol AIM
