--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -29,7 +29,7 @@ Comment[nn]=Gadu-Gadu-protokoll
 Comment[pt]=Protocolo Gadu-Gadu
 Comment[pt_BR]=Protocolo do Gadu-Gadu
 Comment[ro]=Protocol Gadu-Gadu
-Comment[ru]=Протокол Gadu-Gadu
+Comment[ru]=Протокол обмена сообщениями Gadu-Gadu
 Comment[sr]=Протокол гаду‑гаду
 Comment[sr@ijekavian]=Протокол гаду‑гаду
 Comment[sr@ijekavianlatin]=Protokol Gadu‑Gadu
