--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -28,6 +28,7 @@ Comment[nn]=Lynmeldingstenesta Novell GroupWise
 Comment[pt]=Novell GroupWise Messenger
 Comment[pt_BR]=Mensageiro do GroupWise da Novell
 Comment[ro]=Mesagerul Novell GroupWise
+Comment[ru]=Протокол обмена сообщениями Novell GroupWise
 Comment[sr]=Новелов Групвајз месенџер
 Comment[sr@ijekavian]=Новелов Групвајз месенџер
 Comment[sr@ijekavianlatin]=Novellov GroupWise Messenger
@@ -65,6 +66,7 @@ Name[nn]=GroupWise
 Name[pt]=GroupWise
 Name[pt_BR]=GroupWise
 Name[ro]=GroupWise
+Name[ru]=GroupWise
 Name[sl]=GroupWise
 Name[sr]=Групвајз
 Name[sr@ijekavian]=Групвајз
