--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -29,6 +29,7 @@ Comment[nn]=Internet Relay Chat
 Comment[pt]=Internet Relay Chat
 Comment[pt_BR]=Bate-papo via Internet (IRC)
 Comment[ro]=Internet Relay Chat
+Comment[ru]=Internet Relay Chat
 Comment[sl]=Internet Relay Chat
 Comment[sr]=Ћаскање путем Интернета
 Comment[sr@ijekavian]=Ћаскање путем Интернета
