--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -29,7 +29,7 @@ Comment[nn]=Jabber-protokoll
 Comment[pt]=Protocolo Jabber
 Comment[pt_BR]=Protocolo do Jabber
 Comment[ro]=Protocol Jabber
-Comment[ru]=Протокол Jabber
+Comment[ru]=Протокол обмена сообщениями Jabber
 Comment[sl]=Protokol Jabber
 Comment[sr]=Протокол џабер
 Comment[sr@ijekavian]=Протокол џабер
