--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -29,6 +29,7 @@ Comment[nn]=Meanwhile-protokoll
 Comment[pt]=Protocolo Meanwhile
 Comment[pt_BR]=Protocolo do Meanwhile
 Comment[ro]=Protocol Meanwhile
+Comment[ru]=Протокол обмена сообщениями Meanwhile
 Comment[sr]=Протокол минвајл
 Comment[sr@ijekavian]=Протокол минвајл
 Comment[sr@ijekavianlatin]=Protokol Meanwhile
@@ -66,6 +67,7 @@ Name[nn]=Meanwhile
 Name[pt]=Meanwhile
 Name[pt_BR]=Meanwhile
 Name[ro]=Meanwhile
+Name[ru]=Meanwhile
 Name[sr]=Минвајл
 Name[sr@ijekavian]=Минвајл
 Name[sr@ijekavianlatin]=Meanwhile
