--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -29,6 +29,7 @@ Comment[nn]=MSN Messenger
 Comment[pt]=MSN Messenger
 Comment[pt_BR]=MSN Messenger
 Comment[ro]=Mesagerul MSN
+Comment[ru]=Протокол обмена сообщениями MSN
 Comment[sr]=МСН месенџер
 Comment[sr@ijekavian]=МСН месенџер
 Comment[sr@ijekavianlatin]=MSN Messenger
@@ -65,6 +66,7 @@ Name[nn]=MSN Messenger
 Name[pt]=MSN Messenger
 Name[pt_BR]=MSN Messenger
 Name[ro]=Mesagerul MSN
+Name[ru]=MSN
 Name[sl]=MSN Messenger
 Name[sr]=МСН месенџер
 Name[sr@ijekavian]=МСН месенџер
