--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -29,6 +29,7 @@ Comment[nn]=Skype Internett-telefoni
 Comment[pt]=Telefonia Internet Skype
 Comment[pt_BR]=Telefonia Internet Skype
 Comment[ro]=Telefonie prin internet Skype
+Comment[ru]=Интернет-телефония Skype
 Comment[sr]=Скајп, интернет телефонија
 Comment[sr@ijekavian]=Скајп, интернет телефонија
 Comment[sr@ijekavianlatin]=Skype, internet telefonija
@@ -65,6 +66,7 @@ Name[nn]=Skype
 Name[pt]=Skype
 Name[pt_BR]=Skype
 Name[ro]=Skype
+Name[ru]=Skype
 Name[sl]=Skype
 Name[sr]=Скајп
 Name[sr@ijekavian]=Скајп
