--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -37,6 +37,7 @@ Name[pa]=ਸੰਪਰਕ ਐਕਸ਼ਨ
 Name[pt]=Acções do Contacto
 Name[pt_BR]=Ações dos contatos
 Name[ro]=Acțiuni contacte
+Name[ru]=Действия с контактом
 Name[sr]=Радње са контактима
 Name[sr@ijekavian]=Радње са контактима
 Name[sr@ijekavianlatin]=Radnje sa kontaktima
@@ -77,6 +78,7 @@ Comment[pa]=ਸੰਪਰਕ ਐਕਸ਼ਨ ਸੰਰਚਨਾ
 Comment[pt]=Configurar as Acções do Contacto
 Comment[pt_BR]=Configura as ações do contato
 Comment[ro]=Configurează acțiunile contact
+Comment[ru]=Настройка действий с контактом
 Comment[sl]=Nastavi dejanja stikov
 Comment[sr]=Подесите радње са контактима
 Comment[sr@ijekavian]=Подесите радње са контактима
