--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -29,7 +29,7 @@ Comment[nn]=ICQ-protokoll
 Comment[pt]=Protocolo ICQ
 Comment[pt_BR]=Protocolo do ICQ
 Comment[ro]=Protocol ICQ
-Comment[ru]=Протокол ICQ
+Comment[ru]=Протокол обмена сообщениями ICQ
 Comment[sl]=Protokol ICQ
 Comment[sr]=Протокол ајсикју
 Comment[sr@ijekavian]=Протокол ајсикју
