--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -29,6 +29,7 @@ Comment[nn]=Yahoo!-protokoll
 Comment[pt]=Protocolo Yahoo
 Comment[pt_BR]=Protocolo do Yahoo
 Comment[ro]=Protocol Yahoo
+Comment[ru]=Протокол Yahoo
 Comment[sr]=Протокол Јахуа
 Comment[sr@ijekavian]=Протокол Јахуа
 Comment[sr@ijekavianlatin]=Protokol Yahooa
@@ -66,6 +67,7 @@ Name[nn]=Yahoo
 Name[pt]=Yahoo
 Name[pt_BR]=Yahoo
 Name[ro]=Yahoo
+Name[ru]=Yahoo
 Name[sl]=Yahoo
 Name[sr]=Јаху
 Name[sr@ijekavian]=Јаху
