SVN_SILENT made messages (.desktop file)

--- a/kcal/local.desktop
+++ b/kcal/local.desktop
@@ -40,6 +40,7 @@ Name[th]=ปฎิทินในแฟ้มภายในระบบ
 Name[tr]=Yerel Dosyadaki Takvim
 Name[uk]=Календар в локальному файлі
 Name[wa]=Calindrî dins on fitchî coinrece
+Name[x-test]=xxCalendar in Local Filexx
 Name[zh_CN]=本地文件中的日历
 Name[zh_TW]=本地端檔案裡的行事曆
 Comment=Provides access to a calendar stored in a single local file
@@ -79,6 +80,7 @@ Comment[sv]=Ger tillgång till en kalender lagrad i en enda lokal fil
 Comment[th]=เข้าใช้ปฏิทินที่ถูกจัดเก็บไว้ในแฟ้มภายในระบบ
 Comment[tr]=TEk bir yerel dosyada depolanmış bir takvime erişim sağlar
 Comment[uk]=Надає доступ до календаря, що зберігається у окремому локальному файлі
+Comment[x-test]=xxProvides access to a calendar stored in a single local filexx
 Comment[zh_CN]=提供对被存储在单独的本地文件中的日历的访问支持
 Comment[zh_TW]=提供存取儲存在本地檔案中的行事曆的功能
 X-KDE-Library=kcal_local
