--- a/syndication/CMakeLists.txt
+++ b/syndication/CMakeLists.txt
@@ -9,6 +9,11 @@ add_subdirectory( rss2 )
 
 include_directories( ${Boost_INCLUDE_DIR} )
 
+add_definitions( -DQT_STRICT_ITERATORS )
+add_definitions( -DQT_NO_CAST_FROM_ASCII )
+add_definitions( -DQT_NO_CAST_TO_ASCII )
+add_definitions( -DQT_NO_CAST_FROM_BYTEARRAY )
+
 ########### next target ###############
 
 set(librss2local_SRCS 
