--- a/kcal/local.desktop
+++ b/kcal/local.desktop
@@ -22,14 +22,17 @@ Name[kk]=Жергілікті файлдағы күнтізбе
 Name[km]=ប្រតិទិន​ក្នុង​ឯកសារ​មូលដ្ឋាន
 Name[lt]=Kalendorius vietiniame faile
 Name[lv]=Kalendārs lokālā failā
+Name[nb]=Kalender i lokal fil
 Name[nds]=Kalenner in en lokale Datei
 Name[nl]=Agenda in lokaal bestand
+Name[nn]=Kalender i lokal fil
 Name[pa]=ਲੋਕਲ ਫਾਇਲ 'ਚ ਕੈਲੰਡਰ
 Name[pl]=Kalendarz w pliku lokalnym
 Name[pt]=Calendário num Ficheiro Local
 Name[pt_BR]=Calendário em arquivo local
 Name[ro]=Calendar în fișier local
 Name[ru]=Календарь в локальном файле
+Name[se]=Kaleandar báikkálaš fiillas
 Name[sl]=Koledar v krajevni datoteki
 Name[sr]=Календар у локалном фајлу
 Name[sr@ijekavian]=Календар у локалном фајлу
@@ -64,13 +67,16 @@ Comment[kk]=Бөлек жергілікті файлда сақталған кү
 Comment[km]=ផ្ដល់​ការ​ចូលដំណើរការ​ទៅកាន់​ប្រតិទិន​ដែល​បានផ្ទុក​នៅ​ក្នុង​​ឯកសារ​មូលដ្ឋាន​តែ​មួយ
 Comment[lt]=Suteikia prieigą prie kalendoriaus, esančio viename vietiniame faile
 Comment[lv]=Nodrošina piekļuvi kalendāram, kas glabājas vienā lokālā failā
+Comment[nb]=Gir tilgang til en kalender lagret i en enkelt, lokal fil
 Comment[nds]=Stellt Togriep op en Kalenner binnen een enkel lokaal Datei praat.
 Comment[nl]=Geeft toegang naar een agenda, die in een enkel lokaal bestand opgeslagen is
+Comment[nn]=Gjev tilgang til kontaktar lagra i ei einskild lokal fil.
 Comment[pl]=Daje dostęp do kalendarza przechowywanego w pliku lokalnym
 Comment[pt]=Oferece o acesso a um calendário guardado num único ficheiro local
 Comment[pt_BR]=Fornece acesso a um calendário armazenado em um único arquivo local
 Comment[ro]=Oferă acces la un calendar stocat într-un singur fișier local
 Comment[ru]=Хранение календаря в одном локальном файле
+Comment[se]=Dáinna beasat kaleandarii vurkejuvvon okta báikásaš fiilan
 Comment[sl]=Nudi dostop do koledarja, ki je shranjen v eni sami krajevni datoteki
 Comment[sr]=Пружа приступ календару складиштеном у једном локалном фајлу
 Comment[sr@ijekavian]=Пружа приступ календару складиштеном у једном локалном фајлу
