SVN_SILENT made messages (.desktop file)

--- a/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
+++ b/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
@@ -33,6 +33,7 @@ Name[sr@ijekavianlatin]=Brzoglasnički protokol K‑adresra
 Name[sr@latin]=Brzoglasnički protokol K‑adresra
 Name[sv]=Addressbokens direktmeddelandeprotokoll
 Name[th]=โพรโทคอลข้อความด่วนทันใจของสมุดที่อยู่-K
+Name[tr]=KAdresDefteri Anlık Mesajlaşma Prokolü
 Name[uk]=Протокол миттєвого обміну повідомленнями KAddressbook
 Name[wa]=Protocole di messaedjreye sol moumint di KAddressbook
 Name[x-test]=xxKAddressbook Instant Messaging Protocolxx
