--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -36,6 +36,7 @@ Comment[sr@ijekavianlatin]=Protokol AIM
 Comment[sr@latin]=Protokol AIM
 Comment[sv]=AIM-protokoll
 Comment[th]=โพรโทคอล AIM
+Comment[tr]=AIM Protokolü
 Comment[uk]=Протокол AIM
 Comment[wa]=Protocole AIM
 Comment[x-test]=xxAIM Protocolxx
@@ -75,6 +76,7 @@ Name[sr@ijekavianlatin]=AIM
 Name[sr@latin]=AIM
 Name[sv]=AIM
 Name[th]=AIM
+Name[tr]=AIM
 Name[uk]=AIM
 Name[wa]=AIM
 Name[x-test]=xxAIMxx
