--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -36,6 +36,7 @@ Comment[sr@ijekavianlatin]=Protokol Gadu‑Gadu
 Comment[sr@latin]=Protokol Gadu‑Gadu
 Comment[sv]=Gadu-Gadu protokoll
 Comment[th]=โพรโทคอล Gadu-Gadu
+Comment[tr]=Gadu-Gadu Protokolü
 Comment[uk]=Протокол Gadu-Gadu
 Comment[wa]=Protocole Gadu-gadu
 Comment[x-test]=xxGadu-Gadu Protocolxx
@@ -75,6 +76,7 @@ Name[sr@ijekavianlatin]=Gadu‑Gadu
 Name[sr@latin]=Gadu‑Gadu
 Name[sv]=Gadu-Gadu
 Name[th]=Gadu-Gadu
+Name[tr]=Gadu-Gadu
 Name[uk]=Gadu-Gadu
 Name[wa]=Gadu-Gadu
 Name[x-test]=xxGadu-Gaduxx
