--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -35,6 +35,7 @@ Comment[sr@ijekavianlatin]=Novellov GroupWise Messenger
 Comment[sr@latin]=Novellov GroupWise Messenger
 Comment[sv]=Novell GroupWise-meddelandeklient
 Comment[th]=ข้อความด่วนทันใจ GroupWise ของโนเวลล์
+Comment[tr]=Novell GroupWise Messenger
 Comment[uk]=Програма обміну повідомленнями Novell GroupWise
 Comment[wa]=Messaedjî Novell GroupWise
 Comment[x-test]=xxNovell GroupWise Messengerxx
@@ -74,6 +75,7 @@ Name[sr@ijekavianlatin]=GroupWise
 Name[sr@latin]=GroupWise
 Name[sv]=GroupWise
 Name[th]=GroupWise
+Name[tr]=GroupWise
 Name[uk]=GroupWise
 Name[wa]=GroupWise
 Name[x-test]=xxGroupWisexx
