--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -37,6 +37,7 @@ Comment[sr@ijekavianlatin]=Protokol ICQ
 Comment[sr@latin]=Protokol ICQ
 Comment[sv]=ICQ-protokoll
 Comment[th]=โพรโทคอล ICQ
+Comment[tr]=ICQ Protokolü
 Comment[uk]=Протокол ICQ
 Comment[wa]=Protocole ICQ
 Comment[x-test]=xxICQ Protocolxx
@@ -76,6 +77,7 @@ Name[sr@ijekavianlatin]=ICQ
 Name[sr@latin]=ICQ
 Name[sv]=ICQ
 Name[th]=ICQ
+Name[tr]=ICQ
 Name[uk]=ICQ
 Name[wa]=ICQ
 Name[x-test]=xxICQxx
