--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -36,6 +36,7 @@ Comment[sr@ijekavian]=Ћаскање путем Интернета
 Comment[sr@ijekavianlatin]=Ćaskanje putem Interneta
 Comment[sr@latin]=Ćaskanje putem Interneta
 Comment[sv]=Internet Relay Chat
+Comment[tr]=Internet Relay Chat
 Comment[uk]=Internet Relay Chat
 Comment[wa]=Internet Relay Chat
 Comment[x-test]=xxInternet Relay Chatxx
@@ -75,6 +76,7 @@ Name[sr@ijekavianlatin]=IRC
 Name[sr@latin]=IRC
 Name[sv]=IRC
 Name[th]=IRC
+Name[tr]=IRC
 Name[uk]=IRC
 Name[wa]=IRC
 Name[x-test]=xxIRCxx
