--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -36,6 +36,7 @@ Comment[sr@ijekavianlatin]=Protokol Meanwhile
 Comment[sr@latin]=Protokol Meanwhile
 Comment[sv]=Meanwhile-protokoll
 Comment[th]=โพรโทคอล Meanwhile
+Comment[tr]=Meanwhile Protokolü
 Comment[uk]=Протокол Meanwhile
 Comment[wa]=Protocole Meanwhile
 Comment[x-test]=xxMeanwhile Protocolxx
@@ -74,6 +75,7 @@ Name[sr@ijekavianlatin]=Meanwhile
 Name[sr@latin]=Meanwhile
 Name[sv]=Meanwhile
 Name[th]=Meanwhile
+Name[tr]=Meanwhile
 Name[uk]=Meanwhile
 Name[wa]=Meanwhile
 Name[x-test]=xxMeanwhilexx
