--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -35,6 +35,7 @@ Comment[sr@ijekavian]=МСН месенџер
 Comment[sr@ijekavianlatin]=MSN Messenger
 Comment[sr@latin]=MSN Messenger
 Comment[sv]=MSN Messenger
+Comment[tr]=MSN Messenger
 Comment[uk]=MSN Messenger
 Comment[wa]=MSN Messenger
 Comment[x-test]=xxMSN Messengerxx
@@ -73,6 +74,7 @@ Name[sr@ijekavian]=МСН месенџер
 Name[sr@ijekavianlatin]=MSN Messenger
 Name[sr@latin]=MSN Messenger
 Name[sv]=MSN Messenger
+Name[tr]=MSN Messenger
 Name[uk]=MSN Messenger
 Name[wa]=MSN Messenger
 Name[x-test]=xxMSN Messengerxx
