--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -36,6 +36,7 @@ Comment[sr@ijekavianlatin]=Protokol Yahooa
 Comment[sr@latin]=Protokol Yahooa
 Comment[sv]=Yahoo-protokoll
 Comment[th]=โพรโทคอล Yahoo
+Comment[tr]=Yahoo Protokolü
 Comment[uk]=Протокол Yahoo
 Comment[wa]=Protocole Yahoo
 Comment[x-test]=xxYahoo Protocolxx
@@ -75,6 +76,7 @@ Name[sr@ijekavianlatin]=Yahoo
 Name[sr@latin]=Yahoo
 Name[sv]=Yahoo
 Name[th]=Yahoo
+Name[tr]=Yahoo
 Name[uk]=Yahoo
 Name[wa]=Yahoo
 Name[x-test]=xxYahooxx
