--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -35,6 +35,7 @@ Comment[sr@ijekavian]=Скајп, интернет телефонија
 Comment[sr@ijekavianlatin]=Skype, internet telefonija
 Comment[sr@latin]=Skype, internet telefonija
 Comment[sv]=Skype Internettelefoni
+Comment[tr]=Skype Internet Telefonu
 Comment[uk]=Інтернет-телефонія Skype
 Comment[wa]=Telefoneye sol Daegntoele Skype
 Comment[x-test]=xxSkype Internet Telephonyxx
@@ -74,6 +75,7 @@ Name[sr@ijekavianlatin]=Skype
 Name[sr@latin]=Skype
 Name[sv]=Skype
 Name[th]=Skype
+Name[tr]=Skype
 Name[uk]=Skype
 Name[wa]=Skype
 Name[x-test]=xxSkypexx
