--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
+# Ignore the following files
+*~
+*.[oa]
 *.kdev4
+.swp.*
+.*.swp
+*.kate-swp
+Makefile
+Makefile.in
+*.moc
+*.moc.cpp
+*.diff
+*.kdev4
+Doxyfile
+*.user
