SVN_SILENT made messages (.desktop file)

--- a/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
+++ b/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
@@ -27,6 +27,7 @@ Name[nn]=Lynmeldingsprotokoll for KDE-adresseboka
 Name[pt]=Protocolo de Mensagens Instantâneas do KAddressbook
 Name[pt_BR]=Protocolo de Mensagens Instantâneas do KAddressbook
 Name[ro]=Protocol de mesagerie instantanee a cărții de adrese
+Name[ru]=Протокол обмена мгновенными сообщениями KAddressBook
 Name[sr]=Брзогласнички протокол К‑адресра
 Name[sr@ijekavian]=Брзогласнички протокол К‑адресра
 Name[sr@ijekavianlatin]=Brzoglasnički protokol K‑adresra
