--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -29,6 +29,7 @@ Comment[nn]=SMS-protokoll
 Comment[pt]=Protocolo SMS
 Comment[pt_BR]=Protocolo SMS
 Comment[ro]=Protocol SMS
+Comment[ru]=Протокол SMS
 Comment[sl]=Protokol SMS
 Comment[sr]=Протокол СМС
 Comment[sr@ijekavian]=Протокол СМС
