--- a/kontactinterface/kontactplugin.desktop
+++ b/kontactinterface/kontactplugin.desktop
@@ -29,6 +29,7 @@ Name[pa]=ਕੇਸੰਪਰਕ ਪਲੱਗਇਨ
 Name[pt]='Plugin' do Kontact
 Name[pt_BR]=Plug-in do Kontact
 Name[ro]=Modul Kontact
+Name[ru]=Модуль Kontact
 Name[sl]=Vstavek za Kontact
 Name[sr]=Прикључак за Контакт
 Name[sr@ijekavian]=Прикључак за Контакт
